--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -155,14 +155,16 @@ The wrapper function, called _runExomeAncestry()_, requires 4 files as input:
 - The **Profile SNP pileup file** (one per sample present in the study)
 - The **Profile PED RDS file** (one file with information for all profiles in the study)
 
-In addtions, a *data.frame* containing the general information about the 
+In addition, a *data.frame* containing the general information about the 
 study is also required. The *data.frame* must contain those 3 columns:
 
 - _study.id_: The study identifier (example: TCGA-BRCA).
 - _study.desc_: The description of the study.
 - _study.platform_: The type of sequencing (example: RNA-seq).
 
-#### Population reference files
+<br>
+
+#### **Population reference files**
 
 For demonstration purpose, a small 
 **population reference GDS file** (called _ex1kg.gds_) and a small 
@@ -176,7 +178,9 @@ The required **population reference GDS file** and
 directory. In the example below, this directory is referred to 
 as **pathReference**. 
 
-#### Population SNP pileup file
+<br>
+
+#### **Population SNP pileup file**
 
 The generic **Profile SNP pileup file** format is coma separated and the 
 mandatory columns are:
@@ -198,7 +202,9 @@ correspond to the profile identifier (Name.ID) in the following analysis.
 For example, a SNP pileup file called "Sample.01.txt.gz" would be 
 associated to the "Sample.01" profile.
 
-#### Profile PED RDS file
+<br>
+
+#### **Profile PED RDS file**
 
 The **Profile PED RDS file** must contain a *data.frame* describing all 
 the profiles to be analyzed. These 5 mandatory columns: 
@@ -218,12 +224,13 @@ Alternatively, the PED information can be saved in another type of
 file (CVS, etc..) as long as the *data.frame* information can be regenerated 
 in R (with _read.csv()_ or else). 
 
+<br>
 
-#### Example
+#### **Example**
 
 This example run an ancestry inference on an exome sample. Both population 
 reference files are demonstration files and should not be 
-used for a real ancestry inference. Beware that an ancestry inference done 
+used for a real ancestry inference. Beware that running an ancestry inference 
 on real data will take longer to run.
 
 ```{r runExomeAncestry, echo=TRUE, eval=TRUE, collapse=FALSE, warning=FALSE, message=FALSE}
@@ -402,10 +409,25 @@ also required. The *data.frame* must contain those 3 columns:
 - _study.desc_: The description of the study.
 - _study.platform_: The type of sequencing (example: RNA-seq).
 
+<br>
+
+#### **Population reference files**
+
+For demonstration purpose, a small 
+**population reference GDS file** (called _ex1kg.gds_) and a small 
+**population reference SNV Annotation GDS file** (called _exAnnot1kg.gds_) are 
+included in this package. Beware that those two files should not be used to 
+run a real ancestry inference.The results obtained with those files won't be 
+reliable.
+
 The required **population reference GDS file** and 
 **population reference SNV Annotation GDS file** should be stored in the same
 directory. In the example below, this directory is referred to 
 as **pathReference**.
+
+<br>
+
+#### **Profile SNP pileup file**
 
 The generic **Profile SNP pileup file** format is coma separated and the 
 mandatory columns are:
@@ -427,6 +449,10 @@ correspond to the profile identifier (Name.ID) in the following analysis.
 For example, a SNP pileup file called "Sample.01.txt.gz" would be 
 associated to the "Sample.01" profile.
 
+<br>
+
+#### **Profile PED RDS file**
+
 The **Profile PED RDS file** must contain a *data.frame* describing all 
 the profiles to be analyzed. These 5 mandatory columns: 
 
@@ -444,6 +470,15 @@ This file is referred to as the **Profile PED RDS file** (PED for pedigree).
 Alternatively, the PED information can be saved in another type of 
 file (CVS, etc..) as long as the *data.frame* information can be regenerated 
 in R (with _read.csv()_ or else). 
+
+<br>
+
+#### **Example**
+
+This example run an ancestry inference on an RNA sample. Both population 
+reference files are demonstration files and should not be 
+used for a real ancestry inference. Beware that running an ancestry inference 
+on real data will take longer to run.
 
 ```{r runRNAAncestry, echo=TRUE, eval=TRUE, collapse=FALSE, warning=FALSE, message=FALSE}
 #############################################################################
