--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -66,10 +66,10 @@ also used to generate the PCA on which the samples of interest are going to
 be projected. 
 
 The *Population Reference GDS file* is a GDS object of class 
-[SNPGDSFileClass](https://www.bioconductor.org/packages/release/bioc/vignettes/SNPRelate/inst/doc/SNPRelate.html#data-formats-used-in-snprelate) from [SNPRelate](https://www.bioconductor.org/packages/release/bioc/html/SNPRelate.html) 
+[SNPGDSFileClass](https://www.bioconductor.org/packages/release/bioc/vignettes/) from [SNPRelate](https://www.bioconductor.org/packages/release/bioc/html/SNPRelate.html) 
 package [@Zheng2012].
 
-Beware that only unrelated samples should be present in the GDS files. 
+Beware that related profiles should be flagged in the *Population Reference GDS file* files. 
 
 ```{r runRefGDS, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 #############################################################################
@@ -121,10 +121,24 @@ The mandatory fields are:
 <br>
 
 This following example shows how to create a *Population GDS Reference file*. 
-This example is for demonstration purpose only. A working 
-*Population GDS Reference file* would have to contain multiple samples from 
+This example is for demonstration purpose only and use hard coded values. 
+A working *Population GDS Reference file* would have to contain multiple 
+samples from 
 each continental population and would also have to contain the SNVs from the 
 entire genome.
+
+To generate a real *Population GDS Reference file*, the pipeline to process 
+the information would depend of the selected source.
+If the source files are in VCF format, you can use Bioconductor 
+[VariationAnnotation](https://bioconductor.org/packages/release/bioc/html/VariantAnnotation.html)
+package to extract the genotypic information (beware it may use a lot of 
+memory).
+Often, you will need to parse metadata files to get information such as the 
+sex and population of the profiles. In addition, the Bioconductor 
+[GENESIS](https://bioconductor.org/packages/release/bioc/html/GENESIS.html) 
+package can 
+be used to compute kinship coefficients to identify the unrelated profiles.
+
 
 ```{r createRefGDS, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 #############################################################################
@@ -270,8 +284,16 @@ unlink(fileNewReferenceGDS, force=TRUE)
 
 The *Population Reference Annotation GDS file* contains phase information
 and block group information for all the SNVs present in 
-*Population Reference GDS file*.  A block can be a linkage disequelibrium block
-relative to a population or a gene.
+*Population Reference GDS file*.  
+If the source files are in VCF format, you can use Bioconductor 
+[VariationAnnotation](https://bioconductor.org/packages/release/bioc/html/VariantAnnotation.html)
+package to extract the phase information (beware it may use a lot of 
+memory).
+A block can be a linkage disequelibrium block
+relative to a population or a gene. A bioconductor package like 
+[GENESIS](https://bioconductor.org/packages/release/bioc/html/GENESIS.html) 
+can be used to get the block information.
+
 
 ```{r runRefAnnotGDS, echo=TRUE, eval=TRUE, collapse=TRUE, warning=FALSE, message=FALSE}
 #############################################################################
