--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -302,9 +302,9 @@ can be used to get the block information.
 library(RAIDS)    
 library(SNPRelate)
 
-pathReference <- system.file("extdata/example/", package="RAIDS")
+pathReference <- system.file("extdata/tests", package="RAIDS")
 
-fileReferenceAnnotGDS <- file.path(pathReference, "gdsRef", "exAnnot1kg.gds")
+fileReferenceAnnotGDS <- file.path(pathReference, "ex1_good_small_1KG.gds")
 
 gdsRefAnnot <- openfn.gds(fileReferenceAnnotGDS)
 
