Update the man for pathGeno

--- a/inst/extdata/README
+++ b/inst/extdata/README
@@ -50,5 +50,5 @@ in listSNPIndexes_Demo.rds
 
 The file:
 unrelatedPatientsInfo_Demo.rds
-list of unrelated patient from 1000 genome describe in
+list of unrelated (the file does not represent real relation between) patient from 1000 genome describe in
 https://wellcomeopenresearch.org/articles/4-50/
