--- a/vignettes/Create_Reference_GDS_File.Rmd
+++ b/vignettes/Create_Reference_GDS_File.Rmd
@@ -172,21 +172,20 @@ sampleInformation <- data.frame(sex=c("1", "2", "1", "1", "1",
         "1", "2", "2", "1", "2"), pop.group=c(rep("GBR", 6), rep("FIN", 4)), 
         superPop=c(rep("EUR", 10)), batch=rep(0, 10), stringsAsFactors=FALSE)
 add.gdsn(node=gdsRefNew, name="sample.annot", val=sampleInformation, 
-             check=TRUE)
+            check=TRUE)
 
 ## The identifier of each SNV is added in the 'snp.id' entry
 snvID <- c("s29603", "s29605", "s29633", "s29634", "s29635", "s29637", 
             "s29638", "s29663", "s29664", "s29666", "s29667", "s29686", 
             "s29687", "s29711", "s29741", "s29742", "s29746", "s29750", 
             "s29751", "s29753")
-add.gdsn(node=gdsRefNew, name="snp.id", val=snvID, 
-             check=TRUE)
+add.gdsn(node=gdsRefNew, name="snp.id", val=snvID, check=TRUE)
 
 ## The chromosome of each SNV is added to the 'snp.chromosome' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvChrom <- c(rep(1, 20))
 add.gdsn(node=gdsRefNew, name="snp.chromosome", val=snvChrom, storage="uint16",
-             check=TRUE)
+            check=TRUE)
 
 ## The position on the chromosome of each SNV is added to 
 ## the 'snp.position' entry
@@ -194,56 +193,56 @@ add.gdsn(node=gdsRefNew, name="snp.chromosome", val=snvChrom, storage="uint16",
 snvPos <- c(3467333, 3467428, 3469375, 3469387, 3469502, 3469527, 
                     3469737, 3471497, 3471565, 3471618)
 add.gdsn(node=gdsRefNew, name="snp.position", val=snvPos, storage="int32",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele information of each SNV is added to the 'snp.allele' entry
 ## The order of the SNVs is the same than in the 'snp.allele' entry
 snvAllele <- c("A/G", "C/G", "C/T", "C/T", "T/G", "C/T", 
                     "G/A", "A/G", "G/A", "G/A")
 add.gdsn(node=gdsRefNew, name="snp.allele", val=snvAllele, storage="string",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the general population (between 0 and 1) of each 
 ## SNV is added to the 'snp.AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.86, 0.01, 0.00, 0.00, 0.01, 0.00, 0.00, 0.00, 0.00, 0.01)
 add.gdsn(node=gdsRefNew, name="snp.AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the East Asian population (between 0 and 1) of each 
 ## SNV is added to the 'snp.EAS_AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.80, 0.00, 0.00, 0.01, 0.00, 0.00, 0.01, 0.00, 0.02, 0.00)
 add.gdsn(node=gdsRefNew, name="snp.EAS_AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the European population (between 0 and 1) of each 
 ## SNV is added to the 'snp.EUR_AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.91, 0.00, 0.01, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.03)
 add.gdsn(node=gdsRefNew, name="snp.EUR_AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the African population (between 0 and 1) of each 
 ## SNV is added to the 'snp.AFR_AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.85, 0.04, 0.00, 0.00, 0.00, 0.01, 0.00, 0.00, 0.00, 0.00)
 add.gdsn(node=gdsRefNew, name="snp.AFR_AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the American population (between 0 and 1) of each 
 ## SNV is added to the 'snp.AMR_AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.83, 0.01, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.02)
 add.gdsn(node=gdsRefNew, name="snp.AMR_AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The allele frequency in the South Asian population (between 0 and 1) of each 
 ## SNV is added to the 'snp.SAS_AF' entry
 ## The order of the SNVs is the same than in the 'snp.id' entry
 snvAF <- c(0.89, 0.00, 0.00, 0.00, 0.05, 0.00, 0.00, 0.01, 0.00, 0.00)
 add.gdsn(node=gdsRefNew, name="snp.SAS_AF", val=snvAF, storage="packedreal24",
-             check=TRUE)
+            check=TRUE)
 
 ## The genotype of each SNV for each sample is added to the 'genotype' entry
 ## The genotype correspond to the number of A alleles
@@ -368,7 +367,7 @@ phase <- matrix(data=c(0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
                         0, 1, 0, 1, 1, 0, 1, 1, 1, 1,
                         0, 0, 1, 0, 0, 0, 0, 1, 0, 0,
                         0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
-                       0, 1, 0, 1, 1, 0, 1, 1, 1, 1), ncol=10, byrow=TRUE)
+                        0, 1, 0, 1, 1, 0, 1, 1, 1, 1), ncol=10, byrow=TRUE)
 add.gdsn(node=gdsRefAnnotNew, name="phase", val=phase, storage="bit2", 
                 check=TRUE)
 
@@ -392,15 +391,15 @@ add.gdsn(node=gdsRefAnnotNew, name="block.annot", val=blockAnnot, check=TRUE)
 ## The block groups (columns) are in the same order as in 
 ## the 'block.annot' entry.
 block <- matrix(data=c(-1, -1, -1, -1, -1,
-                       -2, -2,  1, -2, -2,
-                       -2,  1,  1,  1, -2,
-                       -2,  1,  1,  1, -2,
-                       -2, -3, -2, -3, -2,
-                        1,  2,  2,  2,  1,
-                        1,  2,  2,  2,  1,
-                       -3, -4, -3, -4, -3,
-                        2, -4,  3, -4, -3,
-                        2, -4,  3, -4, -3), ncol=5, byrow=TRUE)
+                        -2, -2,  1, -2, -2,
+                        -2,  1,  1,  1, -2,
+                        -2,  1,  1,  1, -2,
+                        -2, -3, -2, -3, -2,
+                         1,  2,  2,  2,  1,
+                         1,  2,  2,  2,  1,
+                        -3, -4, -3, -4, -3,
+                         2, -4,  3, -4, -3,
+                         2, -4,  3, -4, -3), ncol=5, byrow=TRUE)
 add.gdsn(node=gdsRefAnnotNew, name="block", val=block, storage="int32", 
             check=TRUE)
 
