--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -152,8 +152,9 @@ The wrapper function, called _runExomeAncestry()_, requires 4 files as input:
 
 - The **population reference GDS file**
 - The **population reference SNV Annotation GDS file**
-- The **Profile SNP VCF file** (one per sample present in the study)
-- The **Profile PED RDS file** (one file with information for all profiles in the study)
+- The **Profile SNP file** (one per sample present in the study)
+- The **Profile PED RDS file** (one file with information for all 
+profiles in the study)
 
 In addition, a *data.frame* containing the general information about the 
 study is also required. The *data.frame* must contain those 3 columns:
@@ -183,21 +184,22 @@ as **pathReference**.
 
 #### **Profile SNP file**
 
-The VCF **Profile SNP file** file follow the VCF standard with at least those genotype
-fields: GT, AD, DP. The identifiant of the genotype in the VCF must 
-be (Name.ID). The variants in the VCF must be germline variants 
-and should include the genotype of the wild-type homozygous 
-at the selected positions in the reference. One file per
-profile are need and must be gzipped.
+The **Profile SNP file** can be either in a VCF format or in a generic format.
 
-Note that the name assigned to the VCF **Profile SNP file** has to 
-correspond to the profile identifier (Name.ID) in the following analysis. 
+The **Profile SNP VCF file**  follows the VCF standard with at least 
+those genotype fields: _GT_, _AD_ and _DP_. The identifier of the genotype 
+in the VCF file must correspond to the profile identifier _Name.ID_. 
+The SNVs  must be germline variants and should include the genotype of the 
+wild-type homozygous at the selected positions in the reference. One file per
+profile is need and the VCF file must be gzipped.
+
+Note that the name assigned to the **Profile SNP VCF file** has to 
+correspond to the profile identifier _Name.ID_ in the following analysis. 
 For example, a SNP file called "Sample.01.vcf.gz" would be 
 associated to the "Sample.01" profile.
 
-
-The generic **Profile SNP file** format is coma separated and the 
-mandatory columns are:
+A generic SNP file can replace the VCF file. The **Profile SNP Generic file** 
+format is coma separated and the mandatory columns are:
 
 * _Chromosome_: The name of the chromosome
 * _Position_: The position on the chromosome
@@ -208,11 +210,11 @@ mandatory columns are:
 * _File1A_: The count for the alternative nucleotide
 
 Beware that the starting position in the **population reference GDS File** is 
-zero (like BED files). The **Profile SNP file** should also start 
+zero (like BED files). The **Profile SNP Generic file** should also start 
 at position zero.
 
-Note that the name assigned to the **Profile SNP file** has to 
-correspond to the profile identifier (Name.ID) in the following analysis. 
+Note that the name assigned to the **Profile SNP Generic file** has to 
+correspond to the profile identifier _Name.ID_ in the following analysis. 
 For example, a SNP file called "Sample.01.generic.txt.gz" would be 
 associated to the "Sample.01" profile.
 
@@ -223,7 +225,7 @@ associated to the "Sample.01" profile.
 The **Profile PED RDS file** must contain a *data.frame* describing all 
 the profiles to be analyzed. These 5 mandatory columns: 
 
-- _Name.ID_: The unique sample identifier. The profile VCF file  
+- _Name.ID_: The unique sample identifier. The associated **profile SNP file** 
 should be called "Name.ID.txt.gz". 
 - _Case.ID_: The patient identifier associated to the sample.
 - _Sample.Type_: The information about the profile tissue source 
@@ -231,7 +233,7 @@ should be called "Name.ID.txt.gz".
 - _Diagnosis_: The donor's diagnosis.
 - _Source_: The source of the profile sequence data (example: dbGAP_XYZ).
 
-Important: The row names of the *data.frame* must be the profiles' **Name.ID**.
+Important: The row names of the *data.frame* must be the profiles *Name.ID*.
 
 This file is referred to as the **Profile PED RDS file** (PED for pedigree). 
 Alternatively, the PED information can be saved in another type of 
@@ -387,7 +389,8 @@ in the *pathOut* directory.
 
 * The ancestry inference CSV file (**".Ancestry.csv"** file) 
 * The inference information RDS file (**".infoCall.rds"** file)
-* The parameter information RDS files from the synthetic inference (**"KNN.synt.*.rds"** files in a sub-directory)
+* The parameter information RDS files from the synthetic inference 
+(__"KNN.synt.__*__.rds"__ files in a sub-directory)
 
 In addition, a sub-directory (named using the *profile ID*) is 
 also created. 
@@ -414,7 +417,8 @@ It requires 4 files as input:
 - The **population reference GDS file**
 - The **population reference SNV Annotation GDS file**
 - The **Profile SNP file** (one per sample present in the study)
-- The **Profile PED RDS file** (one file with information for all profiles in the study)
+- The **Profile PED RDS file** (one file with information for all 
+profiles in the study)
 
 A *data.frame* containing the general information about the study is 
 also required. The *data.frame* must contain those 3 columns:
@@ -444,20 +448,22 @@ as **pathReference**.
 
 #### **Profile SNP file**
 
-The VCF **Profile SNP file** file follow the VCF standard with at least those genotype
-fields: GT, AD, DP. The identifiant of the genotype in the VCF must 
-be (Name.ID). The variants in the VCF must be germline variants 
-and should include the genotype of the wild-type homozygous 
-at the selected positions in the reference. One file per
-profile are need and must be gzipped.
+The **Profile SNP file** can be either in a VCF format or in a generic format.
 
-Note that the name assigned to the VCF **Profile SNP file** has to 
-correspond to the profile identifier (Name.ID) in the following analysis. 
+The **Profile SNP VCF file**  follows the VCF standard with at least 
+those genotype fields: _GT_, _AD_ and _DP_. The identifier of the genotype 
+in the VCF file must correspond to the profile identifier _Name.ID_. 
+The SNVs  must be germline variants and should include the genotype of the 
+wild-type homozygous at the selected positions in the reference. One file per
+profile is need and the VCF file must be gzipped.
+
+Note that the name assigned to the **Profile SNP VCF file** has to 
+correspond to the profile identifier _Name.ID_ in the following analysis. 
 For example, a SNP file called "Sample.01.vcf.gz" would be 
 associated to the "Sample.01" profile.
 
-The generic **Profile SNP file** format is coma separated and the 
-mandatory columns are:
+A generic SNP file can replace the VCF file. The **Profile SNP Generic file** 
+format is coma separated and the mandatory columns are:
 
 * _Chromosome_: The name of the chromosome
 * _Position_: The position on the chromosome
@@ -468,11 +474,11 @@ mandatory columns are:
 * _File1A_: The count for the alternative nucleotide
 
 Beware that the starting position in the **population reference GDS File** is 
-zero (like BED files). The **Profile SNP file** should also start 
+zero (like BED files). The **Profile SNP Generic file** should also start 
 at position zero.
 
-Note that the name assigned to the **Profile SNP file** has to 
-correspond to the profile identifier (Name.ID) in the following analysis. 
+Note that the name assigned to the **Profile SNP Generic file** has to 
+correspond to the profile identifier _Name.ID_ in the following analysis. 
 For example, a SNP file called "Sample.01.generic.txt.gz" would be 
 associated to the "Sample.01" profile.
 
@@ -483,7 +489,7 @@ associated to the "Sample.01" profile.
 The **Profile PED RDS file** must contain a *data.frame* describing all 
 the profiles to be analyzed. These 5 mandatory columns: 
 
-- _Name.ID_: The unique sample identifier. The profile VCF file  
+- _Name.ID_: The unique sample identifier. The associated **profile SNP file**  
 should be called "Name.ID.txt.gz". 
 - _Case.ID_: The patient identifier associated to the sample.
 - _Sample.Type_: The information about the profile tissue source 
@@ -491,7 +497,7 @@ should be called "Name.ID.txt.gz".
 - _Diagnosis_: The donor's diagnosis.
 - _Source_: The source of the profile sequence data (example: dbGAP_XYZ).
 
-Important: The row names of the *data.frame* must be the profiles' **Name.ID**.
+Important: The row names of the *data.frame* must be the profiles _Name.ID_.
 
 This file is referred to as the **Profile PED RDS file** (PED for pedigree). 
 Alternatively, the PED information can be saved in another type of 
@@ -647,7 +653,8 @@ in the *pathOut* directory.
 
 * The ancestry inference CSV file (**".Ancestry.csv"** file) 
 * The inference information RDS file (**".infoCall.rds"** file)
-* The parameter information RDS files from the synthetic inference (**"KNN.synt.*.rds"** files in a sub-directory)
+* The parameter information RDS files from the synthetic inference 
+(__"KNN.synt.__*__.rds"__ files in a sub-directory)
 
 In addition, a sub-directory (named using the *profile ID*) is 
 also created. 
@@ -684,7 +691,8 @@ the reference dataset, are required:
 - The population reference SNV Retained VCF file
 
 
-The format of those files are described the [Population reference dataset GDS files](Create_Reference_GDS_File.html) 
+The format of those files are described 
+the [Population reference dataset GDS files](Create_Reference_GDS_File.html) 
 vignette.
 
 <span style="color:darkred;font-weight:bold">The reference files associated to 
